--- a/src/styles.scss
+++ b/src/styles.scss
@@ -573,10 +573,6 @@ textarea {
     p, label, ul, li { 
         font-size: 1.5rem;
     }
-
-    .main-section {
-      min-height: 100vh;;
-    }
     
 }
 
